# zenml-mlops-stack

./: .gitignore  404.html  Makefile  README.md  debug-mysql.yaml  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml  train.py
.github/: README-WORKFLOW.md
.github/workflows/: deploy-argocd-apps.yml  docs.yml
applications/: index.html
configuration/: index.html
configuration/certificates/: index.html
docs/: CERTIFICATE_TROUBLESHOOTING.md  CERT_MANAGER_FLOW.md  HTTPS_INGRESS_SETUP.md  MYSQL_CONNECTIVITY.md  ZENML_DEPLOYMENT_INFO.md  index.md
docs/applications/: index.md
docs/configuration/: certificates.md  index.md
docs/getting-started/: index.md  prerequisites.md  quick-start.md
docs/infrastructure/: index.md
docs/operations/: index.md
docs/reference/: index.md
docs/troubleshooting/: index.md
getting-started/: index.html
getting-started/prerequisites/: index.html
getting-started/quick-start/: index.html
infrastructure/: index.html
operations/: index.html
reference/: index.html
scripts/: cleanup-k8s-apps.sh  test-mysql-connectivity.sh
search/: search_index.json
src/argocd-apps/: cert-manager.yaml  cluster-issuers.yaml  external-secrets-operator.yaml  mlflow-infrastructure.yaml  mlflow-server.yaml  nginx-ingress.yaml  zenml-cert-cleanup.yaml  zenml-external-secrets.yaml  zenml-rbac.yaml  zenml-secret-store.yaml  zenml-server.yaml
src/infra/: .gitignore  README.md  main.tf  outputs.tf  setup-cluster.sh  variables.tf
src/k8s-cluster/: README.md
src/mlflow/: README.md  values-complex.yaml  (+2 more)
troubleshooting/: index.html
(+49 files in other folders)
