[project]
name = "zenml-mlops-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gcsfs>=2025.9.0",
    "google-cloud-storage>=3.3.1",
    "pandas>=2.3.2",
    "pip>=25.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
    "zenml[server]==0.84.3",
]

[dependency-groups]
dev = [
    "pygithub>=2.8.1",
    "ruff>=0.12.12",
]
